# prj

HaskellRules-jun06/: NDSM.hs  README  TypeChg.hs  TypeChgMin.hs  TypeChgPlus.hs  TypeChgTrad.hs  TypeFV.hs  TypeFVSet.hs  TypeGT.hs  TypeGU.hs  TypeLam.hs
Hasksei/: Inference.hs  PMap.hs  PTypes.hs  Printf.hs
ParentheC/: AST.hs  Parser.hs
PiForall/: Lexer.hi  Lexer.hs  Lexer.x  Makefile  Parser.y  test
Unify/: CKanren.hs  Fix.hs  Fresh.hs  Goal.hs  MKTypes.hs  MiniKanren.hs  NEQ.hs  Ops.hs  Set.hs  Tests.hs  Unification.hs
UnifyTerm/: Fresh.hs  Goal.hs  MKTypes.hs  MiniKanren.hs  NEQ.hs  Ops.hs  Set.hs  TH.hs  Unification.hs
alpha-equiv/: alpha-equiv.cabal  cabal.sandbox.config
alpha-equiv/src/Language/Haskell/TH/: AlphaEquiv.hs
anti-test/: anti-test.cabal  cabal.sandbox.config
applicatives/: applicatives.cabal  cabal.sandbox.config
applicatives/src/Control/: Apply.hs
binary-arith/: binary-arith.cabal  cabal.sandbox.config
binary-arith/src/Data/Num/: Binary.hs
bound-test/: bound-test.cabal  cabal.sandbox.config
cabal-mod/: cabal-mod  cabal-mod.cabal  cabal.sandbox.config  tasks
cabal-mod/src/: Main.hs
cabal-mod/src/Distribution/PackageDescription/: Lens.hs  Modify.hs
clay-bootstrap/: cabal.sandbox.config  clay-bootstrap.cabal
clp/: cabal.sandbox.config  clp.cabal
codata/: 2  cabal.sandbox.config  codata.cabal
codata/src/Codata/: Stream.hs
comonad/: comonad.hi  comonad.hp  comonad.hs  comonad.html
compo/: cabal.sandbox.config  compo.cabal
conduit/: tut.hs
constraint-extras/: cabal.sandbox.config  constraint-extras.cabal
constraint-extras/src/Data/Constraint/: All.hs  Base.hs  Biconditional.hs  Cross.hs  Dict.hs  Each.hs  Extra.hs  Indexed.hs  Member.hs  Product.hs  Proof.hs  Quantify.hs  Sum.hs
constraint-instances/: cabal.sandbox.config  constraint-instances.cabal
constraint-instances/src/: Test.hs
constraint-instances/src/Data/Constraint/: Instance.hs
constraint-sets/: cabal.sandbox.config  constraint-sets.cabal
constraint-sets/src/Data/Constraint/: Extras.hs  Set.hs
cont-abort/: cont-abort.cabal
containers-quote/: cabal.sandbox.config  containers-quote.cabal
conts/: cabal.sandbox.config  conts.cabal
coroutines/: cabal.sandbox.config  coroutines.cabal
defunc/: cabal.sandbox.config  defunc.cabal
defunc/src/Data/Type/: Defunction.hs  Monoid.hs
diagrams-begriffsschrift/: cabal.sandbox.config  diagrams-begriffsschrift.cabal
diagrams-linear/: cabal.sandbox.config
dsl-qq/: cabal.sandbox.config  dsl-qq.cabal
eq-reasoning/: cabal.sandbox.config  eq-reasoning.cabal
eq-reasoning/src/Syntax/: Equational.hs
fay-angular/: cabal.sandbox.config  fay-angular.cabal
fay-angular/src/Language/Fay/: Angular.hs
ffi-test/: cabal.sandbox.config  ffi-test.cabal
fin-test/: cabal.sandbox.config  fin-test.cabal
final-def/: cabal.sandbox.config  final-def.cabal
final-fix/: final-fix.cabal  (+1 more)
final-regex/: cabal.sandbox.config  final-regex.cabal
final-regex/src/Data/Constraint/: Recover.hs
final-regex/src/Text/: Regex.hs
flex-functors/: cabal.sandbox.config  flex-functors.cabal
flex-functors/src/Data/IxFunctor/: Flex.hs
focus-types/: cabal.sandbox.config  focus-types.cabal
focus-types/src/: Test.hs
focus-types/src/Data/Type/: Focus.hs
focus-types/src/Data/Type/Focus/: TH.hs
focus-types/src/Data/Type/Focus/TH/: Rules.hs
functor-classes/: cabal.sandbox.config  functor-classes.cabal
functor-classes/src/Data/Functor/: Eq.hs  Num.hs  Ord.hs  Read.hs  Show.hs
functor-classes/src/Data/Functor/Classes/: Extra.hs
go-file/: cabal.sandbox.config  go-file  go-file.cabal
go-file/src/: Main.hs
go-file/src/System/FilePath/: Search.hs
go-file/src/System/FilePath/Search/: Results.hs
higher-monads/: cabal.sandbox.config  higher-monads.cabal
higher-monads/src/Control/Monad/: Higher.hs
higher-monads/src/Data/Functor/: Higher.hs
higher-monads/src/Data/Profunctor/: Higher.hs
leibniz-eq/: cabal.sandbox.config  leibniz-eq.cabal
leibniz-eq/src/Data/Type/Equality/: Leibniz.hs
lens-final/: cabal.sandbox.config  lens-final.cabal
lens-final/src/Control/Lens/: Final.hs
lens-final/src/Data/: Final.hs
lens-final/src/Data/Type/: Final.hs
mtl-layered/: cabal.sandbox.config  mtl-layered.cabal
mtl-layered/src/Control/Monad/Layered/: Reader.hs
mtl-layered/src/Control/Monad/Layered/Except/: Class.hs
mtl-layered/src/Control/Monad/Layered/State/: Class.hs  Lazy.hs  Strict.hs
mtl-layered/src/Control/Monad/Layered/Writer/: Class.hs
mtl-layered/src/Data/: .Nat.hs.swp  Nat.hs
numeric-types/: cabal.sandbox.config  numeric-types.cabal
numeric-types/src/Data/Type/: Fin.hs  Nat.hs
parens/: cabal.sandbox.config  parens.cabal
parens/src/Text/Parse/: Parens.hs
parsers/: cabal.sandbox.config  parsers.cabal
parsers/src/Control/Comonad/: Parser.hs
patterns/: Pattern.hs.bk  cabal.sandbox.config  patterns.cabal
patterns/src/Data/: .Rep.hs.swp  Pattern.hs  Rep.hs
patterns/src/Data/Pattern/: Class.hs
phoas/: cabal.sandbox.config  phoas.cabal
phoas/src/Data/: PHOAS.hs
poly-categories/: cabal.sandbox.config  mods  poly-categories.cabal
poly-categories/src/Control/: Categorical.hs
poly-categories/src/Control/Categorical/: Bifunctor.hs  Functor.hs  Object.hs
poly-categories/src/Control/Category/: Associative.hs  Braided.hs  Cartesian.hs  Discrete.hs  Distributive.hs  Dual.hs  Embed.hs  Monoidal.hs
poly-categories/src/Control/Category/Cartesian/: Closed.hs
poly-categories/src/Data/: Semigroupoid.hs
poly-lens/: cabal.sandbox.config  poly-lens.cabal
poly-lens/src/: .Test.hs.swp  Test.hs
poly-lens/src/Control/Lens/: Poly.hs
poly-lens/src/Control/Lens/Poly/: .TH.hs.swp  TH.hs
prelude-compose/: 2  cabal.sandbox.config  prelude-compose.cabal
prelude-compose/src/Prelude/: Compose.hs
printf/: cabal.sandbox.config  printf.cabal
printf/src/Data/Text/: Printf.hs
quantified-constraints/: 2  cabal.sandbox.config  quantified-constraints.cabal
quantified-constraints/src/Data/Constraint/: Choice.hs  Member.hs  Quantified.hs
quantified-constraints/src/Data/Type/Equality/: Bool.hs
(+2190 files in other folders)
