name: alpha-equiv
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        mtl -any,
        containers -any,
        base -any,
        lens -any,
        template-haskell -any
    exposed-modules:
        Language.Haskell.TH.AlphaEquiv
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 