name: applicatives
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        semigroups -any,
        profunctors -any,
        semigroupoids -any,
        base -any
    exposed-modules:
        Control.Apply
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -fno-warn-amp
 
 