name: binary-arith
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        mtl -any,
        transformers -any,
        base -any,
        vector -any
    exposed-modules:
        Data.Num.Binary
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 