name: constraint-extras
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        constraints -any,
        base -any
    exposed-modules:
        Data.Constraint.Indexed
        Data.Constraint.Base
        Data.Constraint.Cross
        Data.Constraint.Dict
        Data.Constraint.Quantify
        Data.Constraint.Product
        Data.Constraint.Sum
        Data.Constraint.Extra
        Data.Constraint.Proof
        Data.Constraint.Each
        Data.Constraint.All
        Data.Constraint.Member
        Data.Constraint.Biconditional
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 