name: constraint-instances
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        containers -any,
        haskell-src-meta -any,
        unordered-containers -any,
        monad-unify -any,
        logict -any,
        pretty-show -any,
        lens -any,
        template-haskell -any,
        base -any,
        constraints -any
    exposed-modules:
        Test
        Data.Constraint.Instance
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 