name: constraint-sets
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        lens -any,
        base -any,
        constraints -any
    exposed-modules:
        Data.Constraint.Extras
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 