
name:                fay-angular
version:             0.1.0.0
synopsis:            AngularJS binding.
license:             BSD3
license-file:        LICENSE
author:              Kyle Carter
maintainer:          kylcarte@gmail.com
copyright:           Copyright Kyle Carter, 2013
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Language.Fay.Angular
  -- other-modules:       
  -- other-extensions:    
  build-depends:       fay-base >=0.14.1.0
  hs-source-dirs:      src
  default-language:    Haskell2010
