
name:                flex-functors
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          kcarter@galois.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.IxFunctor.Flex
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base -any
  hs-source-dirs:      src
  default-language:    Haskell2010

