name: focus-types
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        void -any,
        haskell-names -any,
        profunctors -any,
        containers -any,
        lens >=4.0 && <4.3,
        template-haskell -any,
        base -any
    exposed-modules:
        Data.Type.Focus.TH.Rules
        Data.Type.Focus
        Data.Type.Focus.TH
        Test
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
 
 