name: functor-classes
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        void -any,
        transformers -any,
        base -any
    exposed-modules:
        Data.Functor.Eq
        Data.Functor.Ord
        Data.Functor.Num
        Data.Functor.Read
        Data.Functor.Show
        Data.Functor.Classes.Extra
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -Wall
 
 