
name:                go-file
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          kcarter@galois.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     System.FilePath.Search
                       System.FilePath.Search.Results
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base -any,
                       containers -any,
                       directory -any,
                       filepath -any,
                       filemanip -any,
                       process -any,
                       mtl -any,
                       pretty-show -any,
                       unix -any
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010

executable go-file
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base -any,
                       containers -any,
                       directory -any,
                       go-file -any,
                       filepath -any,
                       filemanip -any,
                       process -any,
                       mtl -any,
                       pretty-show -any,
                       unix -any
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -threaded -O2 -Wall

