name: higher-monads
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        profunctors -any,
        transformers -any,
        base -any
    exposed-modules:
        Data.Profunctor.Higher
        Data.Functor.Higher
        Control.Monad.Higher
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 