name: lens-final
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        base -any
    exposed-modules:
        Data.Final
        Data.Type.Final
        Control.Lens.Final
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 