
name:                mtl-layered
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
-- author:              
maintainer:          kcarter@galois.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Layered.Reader
                       Control.Monad.Layered.State.Class
                       Control.Monad.Layered.Writer.Class
                       Control.Monad.Layered.Except.Class
                       -- Control.Monad.Layered.State.Lazy
                       -- Control.Monad.Layered.State.Strict
                       Data.Nat
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base -any,
                       transformers > 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010

