name: numeric-types
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        constraints -any,
        constraint-extras -any,
        base -any
    exposed-modules:
        Data.Type.Fin
        Data.Type.Nat
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
    ghc-options: -ftype-function-depth=2048
 
 