name: parsers
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        transformers -any,
        type-data -any,
        semigroupoids -any,
        profunctors -any,
        base -any,
        comonad -any,
        lens -any
    exposed-modules:
        Control.Comonad.Parser
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 