name: phoas
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        bifunctors -any,
        base -any,
        lens -any,
        profunctors -any
    exposed-modules:
        Data.PHOAS
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 