name: poly-categories
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        void -any,
        base -any
    exposed-modules:
        Data.Semigroupoid
        Control.Categorical
        Control.Categorical.Bifunctor
        Control.Categorical.Functor
        Control.Categorical.Object
        Control.Category.Associative
        Control.Category.Braided
        Control.Category.Cartesian
        Control.Category.Cartesian.Closed
        Control.Category.Discrete
        Control.Category.Distributive
        Control.Category.Dual
        Control.Category.Embed
        Control.Category.Monoidal
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 
