name: poly-lens
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        template-haskell -any,
        base -any,
        lens -any
    exposed-modules:
        Test
        Control.Lens.Poly.TH
        Control.Lens.Poly
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 