name: prelude-compose
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: kcarter@galois.com
 
library
    build-depends:
        contravariant -any,
        profunctors -any,
        base -any
    exposed-modules:
        Prelude.Compose
    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src
 
 